# aed3-tp1-2018-2c

./: .gitignore  CMakeLists.txt  main.cpp
backtracking/src/: Backtracking.cpp  Backtracking.h  Estrategia.h  EstrategiaBacktracking.cpp  EstrategiaBacktracking.h  EstrategiaFuerzaBruta.cpp  EstrategiaFuerzaBruta.h
backtracking/test/: BacktrackingPodasTest.cpp  BacktrackingTest.cpp
datos_experimentacion/: experimento_0.csv  experimento_1.csv  experimento_2.csv  experimento_3.csv  experimento_4.csv  experimento_5.csv
execute_src/: entrada_basica.txt  getInputMultipleSources-BT.cpp  getInputMultipleSources-FB.cpp  getInputMultipleSources-PD.cpp  getInputMultipleSources.cpp  getInputOneSource.cpp  run_instances.cpp
programacion_dinamica/src/: ProgramacionDinamica.cpp  ProgramacionDinamica.h
programacion_dinamica/test/: ProgramacionDinamicaTest.cpp
prueba_integracion_con_gtest/src/: factorial.cpp  factorial.h
prueba_integracion_con_gtest/test/: factorialTest.cpp
